<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.alex.bagofwords.RegistrationActivity"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fitsSystemWindows="true">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <!-- Name of App -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="60dp"/>

    <!-- Name Label -->
    <EditText android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLength="35"
        android:inputType="text|textCapWords"
        android:hint="@string/name"
        android:text=""/>


    <!-- Email Label -->
    <EditText android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:text=""/>


    <!-- Password Label -->
    <EditText android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:text=""/>

    <!-- Compare Password Label -->
    <EditText android:id="@+id/compare_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:text=""/>


    <!-- Register Button -->
    <Button
        android:id="@+id/button_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/register"/>

    <!-- Login Activity -->
    <TextView android:id="@+id/link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/linkToLogin"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>
</ScrollView>

