<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.alex.bagofwords.LoginActivity"

    android:background="#03A9F4"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fitsSystemWindows="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <!-- Name of App -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#EEEEEE"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="60dp"/>

    <!-- Email/Username Label -->
    <EditText android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#EEEEEE"
        android:textColorHint="#EEEEEE"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:hint="@string/login"
        android:text=""/>


    <!-- Password Label -->
    <EditText android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#EEEEEE"
        android:textColorHint="#EEEEEE"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:text=""/>


    <!-- Login Button -->
    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/loginButton"/>

    <!-- Create Account/Register -->
    <TextView android:id="@+id/link_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="24dp"
        android:text="@string/createAccount"
        android:textColor="#EEEEEE"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>
</ScrollView>

